@@ -2,7 +2,7 @@
 if (!defined('TYPO3_MODE')) die ('Access denied.');
 
 if (TYPO3_MODE == 'BE') {
-	$reports = array('eid', 'clikeys', 'plugins', 'xclass', 'hooks', 'status', 'ajax');
+	$reports = array('eid', 'clikeys', 'plugins', 'xclass', 'hooks', 'status', 'ajax', 'extensions');
 	foreach ($reports as $report) {
 		$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['reports'][$_EXTKEY][$report] = array(
 			'title' => 'LLL:EXT:' . $_EXTKEY . '/locallang.xml:' . $report . '_title',
